# FedSeg-ALl

./: .gitignore  README.md
FedSeg-MindSpore/: .gitignore  README.md  check_mindspore_runtime.sh  eval.sh  eval_voc.sh  pyproject.toml  run_ade20k.sh  run_camvid.sh  run_city.sh  run_voc.sh
FedSeg-MindSpore/scripts/: mindspore_env.sh
FedSeg-MindSpore/segmentation/: batch_utils.py  check_mindspore_runtime.py  checkpoint_utils.py  client.py  eval.py  eval_utils.py  eval_voc.py  fast_eval.py  federated_main.py  local_profile_probe.py  logger_config.py  mindspore_runtime.py  options.py  seed_utils.py  utils.py
FedSeg-MindSpore/segmentation/myseg/: bisenet_utils.py  bisenetv2.py  cv2_transform.py  dataloader.py  dataloader_camvid.py  datasplit.py  magic.py  tv_transform.py
FedSeg-Tensorflow2/: .gitignore  README.md  check_tensorflow_runtime.sh  eval.sh  eval_voc.sh  pyproject.toml  run_ade20k.sh  run_camvid.sh  run_city.sh  run_voc.sh
FedSeg-Tensorflow2/scripts/: tensorflow_env.sh
FedSeg-Tensorflow2/segmentation/: check_tensorflow_runtime.py  client.py  convert_torch_backbone_to_tf.py  convert_torch_checkpoint_to_tf.py  eval.py  eval_utils.py  eval_voc.py  federated_main.py  logging_utils.py  options.py  runtime_utils.py  seed_utils.py  tensorflow_runtime.py  tf2_tools.py  update.py  utils.py
FedSeg-Tensorflow2/segmentation/myseg/: backbone_v2.meta.json  bisenet_utils.py  bisenetv2.py  bisenetv2_fast.py  cv2_transform.py  dataloader.py  dataloader_camvid.py  datasplit.py  magic.py
FedSeg-Tensorflow2/test/: conftest.py  profile_hot_clients.py  reference_smp_losses.py  test_backce_loss_alignment.py  test_bisenetv2_forward_alignment.py  test_checkpoint_alignment.py  test_client_alignment.py  test_datasplit.py  test_eval_voc_smoke.py  test_local_update_smoke.py  test_loss_alignment_extra.py  test_profile_hot_clients.py  test_weight_aggregation.py
FedSeg-Torch/: .gitignore  README.md  check_torch_runtime.sh  eval.sh  eval_voc.sh  pyproject.toml  run_ade20k.sh  run_camvid.sh  run_city.sh  run_voc.sh
FedSeg-Torch/scripts/: torch_env.sh
FedSeg-Torch/segmentation/: check_torch_runtime.py  client.py  eval.py  eval_utils.py  eval_voc.py  export_activation_trace.py  export_batch_sequence.py  export_bn_trace.py  export_contrast_probe.py  export_local_update.py  export_prototypes.py  export_train_order_spec.py  federated_main.py  local_profile_probe.py  logging_utils.py  options.py  seed_utils.py  torch_runtime.py  update.py  update_bak.py  utils.py
FedSeg-Torch/segmentation/myseg/: bisenet_utils.py  bisenetv2 copy.py  bisenetv2.py  cv2_transform.py  dataloader_camvid.py  datasplit.py
FedSeg_Paddle/: .gitignore  README.md  pyproject.toml
FedSeg_Paddle/paddle_scripts/: requirements.txt  run_city.sh  run_voc.sh
FedSeg_Paddle/paddle_segmentation/: eval.py  paddle_utils.py  update_bak.py
FedSeg_Paddle/segmentation/: eval_utils.py  federated_main.py  options.py  update.py  utils.py
(+42 files in other folders)
