[project]
name = "fedseg-tensorflow2"
version = "0.1.0"
description = "TensorFlow 2 implementation of FedSeg"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "keras==3.12.0",
    "loguru==0.7.3",
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
    "pillow==12.0.0",
    "tensorflow[and-cuda]==2.20.0",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "tqdm==4.67.1",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
]

[tool.uv]
package = false
link-mode = "copy"
environments = ["sys_platform == 'linux'"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
