[project]
name = "fedseg-torch"
version = "0.1.0"
description = "PyTorch implementation of FedSeg"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy==2.4.0",
    "opencv-python==4.11.0.86",
    "pillow==12.1.0",
    "tqdm==4.67.1",
    "loguru==0.7.3",
    "segmentation-models-pytorch==0.3.4",
    "torch==2.8.0",
    "torchvision==0.23.0",
]

[tool.uv]
package = false
link-mode = "copy"

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
