[project]
name = "fedseg-paddle"
version = "0.1.0"
description = "Paddle implementation of FedSeg"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
    "pillow==11.3.0",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
    "setuptools>=70",
    "tqdm==4.67.1",
    "paddlepaddle-gpu==3.3.0",
]

[tool.uv]
package = false
link-mode = "copy"
environments = ["sys_platform == 'linux'"]

[tool.uv.sources]
paddlepaddle-gpu = { index = "paddle-cu120" }

[[tool.uv.index]]
name = "paddle-cu120"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu129"
explicit = true
